# Renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/model/: bounding_box.h  camera.h  data_io.h  data_loader.h  io.h  light.h  material.h  object.h  scene.h  texture.h  triangle.h  utils.h  vertex.h
include/path_tracing/cpu/: bvh.h  path_tracing_material.h  path_tracing_object.h  path_tracing_scene.h  ray.h  render.h  scene.h
include/path_tracing/vulkan/: renderer.h  renderer_rt_core.h  ssbo_buffer_manager.h  vulkan_path_tracing_renderer_rt_core.h
include/rasterizer/cpu/: cpu_rasterizer_renderer.h  model.h  rasterizer.h  shader.h  transform.h
include/rasterizer/vulkan/: vulkan_deferred_render.h  vulkan_rasterizer_render.h  vulkan_rasterizer_render_base.h
include/vulkan_manager/: buffer_manager.h  command_manager.h  content_manager.h  context_manager.h  descriptor_manager.h  geometry_buffer_manager.h  image_manager.h  pipeline_manager.h  render_pass_manager.h  shader_manager.h  shadow_map_manager.h  swap_chain_manager.h  texture_manager.h  vulkan_render_base.h  vulkan_utils.h
models/light_test/: light_test.glb  light_test.mtl
models/veach-mis/: veach-mis.mtl
models/viking_room/: viking_room.mtl
shaders/: CMakeLists.txt  blinn_phong.glsl  comp.spv  compute.spv  deferred_geometry_buffer.frag  deferred_geometry_buffer.vert  deferred_light.frag  deferred_ssao.frag  draw_single_frame.frag  draw_single_frame.vert  fragment.spv  light.glsl  material.glsl  pathTracing.comp  path_tracing.comp  path_tracing.frag  path_tracing.glsl  path_tracing.rchit  path_tracing.rgen  path_tracing.rmiss  path_tracing.vert  path_tracing_denoise_single_frame.frag  path_tracing_denoise_time_accumulate.frag  path_tracing_shadow.rahit  path_tracing_shadow.rchit  path_tracing_vertex.glsl  pbr.glsl  rasterize.frag  rasterize.vert  shadow_direction_generete.vert  shadow_generate.frag  shadow_generate.vert  shadow_point_generate.vert  temp.h  vertex.spv
src/: main.cpp
src/model/: CMakeLists.txt  bounding_box.cpp  data_io.cpp  data_loader.cpp  material.cpp  texture.cpp  triangle.cpp  utils.cpp  vertex.cpp
src/path_tracing/: CMakeLists.txt
src/path_tracing/cpu/: bvh.cpp  path_tracing_material.cpp  path_tracing_object.cpp  path_tracing_scene.cpp  ray.cpp  render.cpp  scene.cpp
src/path_tracing/vulkan/: renderer.cpp  renderer_rt_core.cpp  vulkan_path_tracing_renderer_rt_core.cpp
src/rasterizer/: CMakeLists.txt
src/rasterizer/cpu/: model.cpp  rasterizer.cpp  shader.cpp  transform.cpp
src/vulkan_manager/: CMakeLists.txt  buffer_manager.cpp  command_manager.cpp  content_manager.cpp  context_manager.cpp  descriptor_manager.cpp  geometry_buffer_manager.cpp  image_manager.cpp  pipeline_manager.cpp  render_pass_manager.cpp  shader_manager.cpp  shadow_map_manager.cpp  swap_chain_manager.cpp  texture_manager.cpp  vulkan_utils.cpp
